<resources>
    <string name="app_name">Memory game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="about1">Memory games give space to critical thinking and that helps children nurture their attention to detail.   Memory games can improve visual recognition. With many memory games based on spotting differences, or linking two related images, children improve their visual discrimination.</string>
</resources>