<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/memory_back4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.MenuScreen">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEasy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/easy"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/font1"
        android:background="@drawable/back_btn1"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toTopOf="@id/btnMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginVertical="20dp"
        android:id="@+id/btnMedium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/medium"
        android:fontFamily="@font/font1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.07"
        android:background="@drawable/back_btn1"
        app:layout_constraintBottom_toTopOf="@id/btnHard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEasy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hard"
        android:textSize="18sp"
        android:background="@drawable/back_btn1"
        android:fontFamily="@font/font1"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMedium" />







    <com.airbnb.lottie.LottieAnimationView
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/btnHard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent="0.15"
        android:id="@+id/animationView"
        app:lottie_fileName="monkey.json"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <com.airbnb.lottie.LottieAnimationView
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnMedium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintDimensionRatio="1:1"
        android:id="@+id/animationView1"
        app:lottie_fileName="qush1.json"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>







</androidx.constraintlayout.widget.ConstraintLayout>